...
                                        <rect key="frame" x="0.0" y="35" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HhL-w4-ClZ" id="UNV-3v-I8L">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7S-eR-MOc">
                                                    <rect key="frame" x="16" y="12" width="83" height="20"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="83" id="eua-hP-g7h"/>
                                                        <constraint firstAttribute="height" constant="20" id="pQ5-1v-6P6"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Soup" placeholder="ex. Peanut Butter Sandwich" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9qI-bI-Je3">
                                                    <rect key="frame" x="105" y="7" width="256" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="30" id="w4G-6L-yml"/>
                                                    </constraints>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="167" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="igs-Pm-Cym" id="0OA-O0-kHt">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ex. 120 kcal" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7fe-cb-eCf">
                                                    <rect key="frame" x="105" y="7" width="256" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="30" id="zpr-QC-lKX"/>
                                                    </constraints>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                </textField>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y14-EJ-igq">
                                                    <rect key="frame" x="16" y="12" width="83" height="20"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="20" id="hXw-gc-6tw"/>
                                                        <constraint firstAttribute="width" constant="83" id="tJU-qo-10N"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                            <connections>
                                <action selector="deleteButtonPressed:" destination="qKz-3c-Vb6" id="VBg-5C-Kf8"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" id="eSh-79-0Ai">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="WWk-oa-9Zy">
                            <connections>
                                <action selector="backButtonPressed:" destination="qKz-3c-Vb6" id="H9B-es-pcN"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="CbP-1P-fa8">
                            <connections>
                                <action selector="saveButtonPressed:" destination="qKz-3c-Vb6" id="qbc-0y-o5Y"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
